# movie-streaming-platform-backend

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 06891a68d16f_create_users_table.py  20afa550afc2_update_users_model.py  760a0ff8fc4a_create_users_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: users.py
app/core/: config.py  exception_handlers.py  exceptions.py  security.py
app/db/: database.py  models.py
app/schemas/: auth.py
app/services/: auth_service.py
